@@ -56,6 +56,8 @@ $_lang['profiles'] = 'Form Customization Profiles';
 $_lang['profiles_msg'] = 'This is a list of your Form Customization Profiles. Profiles can contain many Form Customization Rules, and can be activated or deactivated. They can also be configured to only apply to certain User Groups.';
 $_lang['rank'] = 'Rank';
 $_lang['rank_desc'] = 'The order the Rule is executed in. A lower number means that it will be executed earlier.';
+$_lang['region'] = 'Region';
+$_lang['regions'] = 'Regions';
 $_lang['rule'] = 'Rule';
 $_lang['rule_create'] = 'Create Rule';
 $_lang['rule_desc'] = 'The type of Rule that will be applied to this field.';
@@ -93,18 +95,18 @@ $_lang['set_remove_confirm'] = 'Are you sure you want to permanently remove this
 $_lang['set_remove_multiple'] = 'Delete Multiple Sets';
 $_lang['set_remove_multiple_confirm'] = 'Are you sure you want to permanently remove these sets? This is irreversable.';
 $_lang['set_tab_err_ae'] = 'A tab already exists with that ID. Please specify another.';
-$_lang['set_tabs_msg'] = 'Here you adjust the tabs for this page, including their visibility and title. Just double-click on a row to edit its value. Leave a field empty to use the default setting.';
+$_lang['set_tabs_msg'] = 'Here you adjust the tabs and regions for this page, including their visibility and title. Just double-click on a row to edit its value. Leave a field empty to use the default setting.';
 $_lang['set_template_desc'] = 'Choosing a Template will limit the rules in the Set from executing unless the Resource has the specified Template.';
-$_lang['set_tvs_msg'] = 'Here you can set visibility, labels, default values and the tabs they reside in by double-clicking on the row in the grid. Note: If you move a TV to another tab, you can adjust the order of the TV in the "Tab Rank" field. Leave a field empty to use the default setting.';
+$_lang['set_tvs_msg'] = 'Here you can set visibility, labels, default values and the tabs they reside in by double-clicking on the row in the grid. Note: If you move a TV to another Region, you can adjust the order of the TV in the "Region Rank" field. Leave a field empty to use the default setting.';
 $_lang['sets'] = 'Form Customization Sets';
 $_lang['simplexml_err_nf'] = 'MODX requires the SimpleXML PHP extension to use this feature. Please ensure the extension is installed before continuing.';
 $_lang['tab'] = 'Tab';
 $_lang['tab_create'] = 'Create New Tab';
 $_lang['tab_id'] = 'ID';
 $_lang['tab_name'] = 'Tab Name';
-$_lang['tab_title'] = 'Tab Title';
+$_lang['tab_title'] = 'Title';
 $_lang['tab_new'] = 'New Tab';
-$_lang['tab_rank'] = 'Tab Rank';
+$_lang['tab_rank'] = 'Region Rank';
 $_lang['tab_remove'] = 'Delete Tab';
 $_lang['tab_remove_confirm'] = 'Are you sure you want to delete this tab?';
 $_lang['tab_visible'] = 'Tab Visible';
