@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#7322] Fix issue where certain regions were not able to be hid via FC; clarified FC set labels
 - [#7362] Fix issue with conflicting FC Sets when User belongs to more than one User Group with a Set
 - Update to xPDO 2.2.3-pl
 - Prevent fatal error if invalid class_key is passed to Resource edit/create page
